@@ -36,6 +36,12 @@ def UNPACK_SEQUENCE(op) :
     "Deal w/Python 1.5.2 (UNPACK_[LIST|TUPLE]) or 2.0 (UNPACK_SEQUENCE)"
     return op in (92, 93,)
 
+def IS_CONDITIONAL_JUMP(op):
+    return op in (111, 112)
+
+def IS_NOT(op):
+    return op == 12
+
 HAVE_ARGUMENT = 90
 EXTENDED_ARG = 143
 
