@@ -32,6 +32,8 @@ def g():
 def h():
   a = 1
   a += a
+  a -= a
+  a *= a
 
   a = not a
   a = not not a
